[package]
name = "oro-logo-rle"
description = "Oro logo animation in RLE format, packages for the Oro kernel"
authors = [ "Joshua Lee Junon <junon@oro.sh> (https://github.com/qix-)" ]
publish = false
version = "0.1.0"
edition = "2021"

build = "build.rs"

[features]
default = []
oro-logo-1024 = []
oro-logo-512 = []
oro-logo-256 = []
oro-logo-64 = []
oro-logo-32 = []

[dependencies]
compression = { version = "0.1.5", default-features = false, features = ["bzip2"] }

[build-dependencies]
lodepng = "3.7.2"
proc-macro2 = "1.0.60"
quote = "1.0.28"
syn = { version = "2.0.18", features = ["full"] }
byteorder = "1.4.3"
compression = "0.1.5"

[dev-dependencies]
crossterm = "0.26.1"
ctrlc = "3.4.0"
rusty-hook = "0.11.2"
tui = "0.19.0"
